--- a/addressbook_web_tests/build.gradle
+++ b/addressbook_web_tests/build.gradle
@@ -20,5 +20,6 @@ test {
     useJUnitPlatform()
     if (project.hasProperty("browser")) {
         systemProperty("browser", project.property("browser"))
+        //new commit
     }
 }
